syntax = "proto2";

message Encounter {
    required fixed64 encounter_id = 1;
    required string spawn = 2;
    required double player_latitude = 3;
    required double player_longitude = 4;
}

message Catch {
    required fixed64 encounter_id = 1;
    required int32 pokeball = 2;
    required double normalized_reticle_size = 3;
    required string spawn_point_guid = 4;
    required bool hit_pokemon = 5;
    required double spin_modifier = 6;
    required double normalized_hit_position = 7;
}
message Berry{
    required int32 item_id = 1;
    required fixed64 encounter_id = 2;
    required string spawn_point_id = 3;
}